1.UI大还原 2.新增很多样式组件，方便使用

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "tileZoo": "Tile Zoo",
-  "playGame": "Play Game",
+  "playGame": "PLAY",
   "level": "level {levelNum}",
   "@level": {
     "placeholders": {
